Added some missing header files to the MSVC project files of the SCI engine
svn-id: r39507

--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -363,6 +363,9 @@
 				RelativePath="..\..\engines\sci\scicore\resource.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\scicore\resource.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\scicore\sciconsole.cpp">
 			</File>
 			<File
@@ -372,10 +375,16 @@
 				RelativePath="..\..\engines\sci\scicore\versions.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\scicore\versions.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\scicore\vocab_debug.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\scicore\vocabulary.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\vocabulary.h">
 			</File>
 		</Filter>
 		<Filter
@@ -482,6 +491,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\tools.h">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\uinput.h">
 		</File>
 	</Files>
 	<Globals>
