--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -495,6 +495,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\scicore\resource.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\scicore\sciconsole.cpp"
 				>
 			</File>
@@ -507,11 +511,19 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\scicore\versions.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\scicore\vocab_debug.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\scicore\vocabulary.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\vocabulary.h"
 				>
 			</File>
 		</Filter>
@@ -653,6 +665,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\tools.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\uinput.h"
 			>
 		</File>
 	</Files>
