--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -256,6 +256,9 @@
 				RelativePath="..\..\engines\sci\gfx\gfx_res_options.h">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\gfx\gfx_resmgr.cpp">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_resmgr.h">
 			</File>
 			<File
@@ -307,7 +310,22 @@
 				RelativePath="..\..\engines\sci\gfx\palette.h">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\gfx\resmgr.cpp">
+				RelativePath="..\..\engines\sci\gfx\res_cursor.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\res_font.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\res_pal.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\res_pic.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\res_view0.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\res_view1.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\sci_widgets.cpp">
@@ -315,27 +333,6 @@
 			<File
 				RelativePath="..\..\engines\sci\gfx\sci_widgets.h">
 			</File>
-			<Filter
-				Name="resource">
-				<File
-					RelativePath="..\..\engines\sci\gfx\resource\res_cursor.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\gfx\resource\res_font.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\gfx\resource\res_pal.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\gfx\resource\res_pic.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\gfx\resource\res_view0.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\gfx\resource\res_view1.cpp">
-				</File>
-			</Filter>
 		</Filter>
 		<Filter
 			Name="scicore">
