Updated the MSVC project files of the Gob, Parallaction, SCI and SCUMM engines
svn-id: r39592

--- a/dists/msvc71/gob.vcproj
+++ b/dists/msvc71/gob.vcproj
@@ -150,6 +150,12 @@
 				RelativePath="..\..\engines\gob\sound\pcspeaker.h">
 			</File>
 			<File
+				RelativePath="..\..\engines\gob\sound\protracker.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\gob\sound\protracker.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\gob\sound\sound.cpp">
 			</File>
 			<File
