--- a/dists/msvc8/gob.vcproj
+++ b/dists/msvc8/gob.vcproj
@@ -210,6 +210,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\gob\sound\protracker.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\gob\sound\protracker.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\gob\sound\sound.cpp"
 				>
 			</File>
