--- a/dists/msvc7/gob.vcproj
+++ b/dists/msvc7/gob.vcproj
@@ -136,6 +136,12 @@
 				RelativePath="..\..\engines\gob\sound\pcspeaker.h">
 			</File>
 			<File
+				RelativePath="..\..\engines\gob\sound\protracker.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\gob\sound\protracker.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\gob\sound\sound.cpp">
 			</File>
 			<File
