--- a/dists/msvc71/parallaction.vcproj
+++ b/dists/msvc71/parallaction.vcproj
@@ -184,6 +184,12 @@
 			RelativePath="..\..\engines\parallaction\gui_ns.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\parallaction\iff.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\parallaction\iff.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\parallaction\input.cpp">
 		</File>
 		<File
