--- a/dists/msvc8/parallaction.vcproj
+++ b/dists/msvc8/parallaction.vcproj
@@ -255,6 +255,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\parallaction\iff.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\parallaction\iff.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\parallaction\input.cpp"
 			>
 		</File>
