Update MSVC project files for r39687.
svn-id: r39692

--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -258,6 +258,12 @@
 				RelativePath="..\..\engines\sci\gfx\gfx_driver.h">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\gfx\gfx_gui.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\gfx_gui.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_options.h">
 			</File>
 			<File
@@ -337,12 +343,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\res_view1.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\gfx\sci_widgets.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\gfx\sci_widgets.h">
 			</File>
 		</Filter>
 		<Filter
