--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -244,6 +244,12 @@
 				RelativePath="..\..\engines\sci\gfx\gfx_driver.h">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\gfx\gfx_gui.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\gfx_gui.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_options.h">
 			</File>
 			<File
@@ -323,12 +329,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\res_view1.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\gfx\sci_widgets.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\gfx\sci_widgets.h">
 			</File>
 		</Filter>
 		<Filter
