Added Cruise sound.cpp/.h to the MSVC projects
svn-id: r39787

--- a/dists/msvc8/cruise.vcproj
+++ b/dists/msvc8/cruise.vcproj
@@ -351,6 +351,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\cruise\sound.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\cruise\sound.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\cruise\stack.cpp"
 			>
 		</File>
