--- a/dists/msvc9/cruise.vcproj
+++ b/dists/msvc9/cruise.vcproj
@@ -352,6 +352,13 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\cruise\sound.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\cruise\sound.h"
+			>
+		<File
 			RelativePath="..\..\engines\cruise\stack.cpp"
 			>
 		</File>
