Update MSVC project files (MSVC9's cruise.vcproj bas broken in r39787).
svn-id: r39792

--- a/dists/msvc7/cruise.vcproj
+++ b/dists/msvc7/cruise.vcproj
@@ -242,6 +242,12 @@
 			RelativePath="..\..\engines\cruise\script.h">
 		</File>
 		<File
+			RelativePath="..\..\engines\cruise\sound.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\cruise\sound.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\cruise\stack.cpp">
 		</File>
 		<File
