--- a/dists/msvc9/cruise.vcproj
+++ b/dists/msvc9/cruise.vcproj
@@ -358,6 +358,7 @@
 		<File
 			RelativePath="..\..\engines\cruise\sound.h"
 			>
+		</File>
 		<File
 			RelativePath="..\..\engines\cruise\stack.cpp"
 			>
