--- a/Makefile.common
+++ b/Makefile.common
@@ -126,11 +126,11 @@ VER_EXTRA = $(shell echo $(VERSION) | cut -d. -f 3 | cut -c2-)
 # Get Subversion's working copy information
 ######################################################################
 
-ifeq ($(shell svn stat $(srcdir) 2>&1 | grep "is not a working copy"),)
+ifeq ($(shell LANG=C svn stat $(srcdir) 2>&1 | grep "is not a working copy"),)
 SVNROOT := $(srcdir)
 ifeq ($(origin SVNREV), undefined)
 # Get the working copy base revision
-VER_SVNREV := $(shell svn info $(SVNROOT) | grep "^Revision" | cut -d ' ' -f 2)
+VER_SVNREV := $(shell LANG=C svn info $(SVNROOT) | grep "^Revision" | cut -d ' ' -f 2)
 endif
 else
 SVNROOT := https://scummvm.svn.sourceforge.net/svnroot/scummvm/scummvm/trunk/
