--- a/dists/msvc9/residual.vcproj
+++ b/dists/msvc9/residual.vcproj
@@ -197,6 +197,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\archive.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\archive.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\array.h"
 				>
 			</File>
@@ -281,6 +289,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\list_intern.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\memorypool.cpp"
 				>
 			</File>
@@ -302,6 +314,10 @@
 			</File>
 			<File
 				RelativePath="..\..\common\ptr.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\queue.h"
 				>
 			</File>
 			<File
@@ -346,6 +362,14 @@
 			</File>
 			<File
 				RelativePath="..\..\common\util.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\zlib.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\zlib.h"
 				>
 			</File>
 		</Filter>
@@ -987,11 +1011,23 @@
 					Name="fs"
 					>
 					<File
+						RelativePath="..\..\engine\backend\fs\abstract-fs.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\..\engine\backend\fs\abstract-fs.h"
 						>
 					</File>
 					<File
 						RelativePath="..\..\engine\backend\fs\fs-factory.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\engine\backend\fs\stdiostream.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\engine\backend\fs\stdiostream.h"
 						>
 					</File>
 					<Filter
@@ -1014,18 +1050,6 @@
 						RelativePath="..\..\engine\backend\saves\savefile.cpp"
 						>
 					</File>
-					<Filter
-						Name="compressed"
-						>
-						<File
-							RelativePath="..\..\engine\backend\saves\compressed\compressed-saves.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\engine\backend\saves\compressed\compressed-saves.h"
-							>
-						</File>
-					</Filter>
 					<Filter
 						Name="default"
 						>
