--- a/dists/msvc71/residual.vcproj
+++ b/dists/msvc71/residual.vcproj
@@ -129,6 +129,12 @@
 				RelativePath="..\..\common\algorithm.h">
 			</File>
 			<File
+				RelativePath="..\..\common\archive.cpp">
+			</File>
+			<File
+				RelativePath="..\..\common\archive.h">
+			</File>
+			<File
 				RelativePath="..\..\common\array.h">
 			</File>
 			<File
@@ -192,6 +198,9 @@
 				RelativePath="..\..\common\list.h">
 			</File>
 			<File
+				RelativePath="..\..\common\list_intern.h">
+			</File>
+			<File
 				RelativePath="..\..\common\memorypool.cpp">
 			</File>
 			<File
@@ -208,6 +217,9 @@
 			</File>
 			<File
 				RelativePath="..\..\common\ptr.h">
+			</File>
+			<File
+				RelativePath="..\..\common\queue.h">
 			</File>
 			<File
 				RelativePath="..\..\common\rect.h">
@@ -241,6 +253,12 @@
 			</File>
 			<File
 				RelativePath="..\..\common\util.h">
+			</File>
+			<File
+				RelativePath="..\..\common\zlib.cpp">
+			</File>
+			<File
+				RelativePath="..\..\common\zlib.h">
 			</File>
 		</Filter>
 		<Filter
@@ -723,10 +741,19 @@
 				<Filter
 					Name="fs">
 					<File
+						RelativePath="..\..\engine\backend\fs\abstract-fs.cpp">
+					</File>
+					<File
 						RelativePath="..\..\engine\backend\fs\abstract-fs.h">
 					</File>
 					<File
 						RelativePath="..\..\engine\backend\fs\fs-factory.h">
+					</File>
+					<File
+						RelativePath="..\..\engine\backend\fs\stdiostream.cpp">
+					</File>
+					<File
+						RelativePath="..\..\engine\backend\fs\stdiostream.h">
 					</File>
 					<Filter
 						Name="windows">
@@ -745,17 +772,6 @@
 					<File
 						RelativePath="..\..\engine\backend\saves\savefile.cpp">
 					</File>
-					<Filter
-						Name="compressed">
-						<File
-							RelativePath="..\..\engine\backend\saves\compressed\compressed-saves.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\engine\backend\saves\compressed\compressed-saves.h"
-							>
-						</File>
-					</Filter>
 					<Filter
 						Name="default">
 						<File
