--- a/dists/msvc8/residual.vcproj
+++ b/dists/msvc8/residual.vcproj
@@ -192,6 +192,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\archive.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\archive.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\array.h"
 				>
 			</File>
@@ -276,6 +284,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\list_intern.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\memorypool.cpp"
 				>
 			</File>
@@ -297,6 +309,10 @@
 			</File>
 			<File
 				RelativePath="..\..\common\ptr.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\queue.h"
 				>
 			</File>
 			<File
@@ -341,6 +357,14 @@
 			</File>
 			<File
 				RelativePath="..\..\common\util.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\zlib.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\zlib.h"
 				>
 			</File>
 		</Filter>
@@ -982,11 +1006,23 @@
 					Name="fs"
 					>
 					<File
+						RelativePath="..\..\engine\backend\fs\abstract-fs.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\..\engine\backend\fs\abstract-fs.h"
 						>
 					</File>
 					<File
 						RelativePath="..\..\engine\backend\fs\fs-factory.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\engine\backend\fs\stdiostream.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\engine\backend\fs\stdiostream.h"
 						>
 					</File>
 					<Filter
@@ -1009,18 +1045,6 @@
 						RelativePath="..\..\engine\backend\saves\savefile.cpp"
 						>
 					</File>
-					<Filter
-						Name="compressed"
-						>
-						<File
-							RelativePath="..\..\engine\backend\saves\compressed\compressed-saves.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\engine\backend\saves\compressed\compressed-saves.h"
-							>
-						</File>
-					</Filter>
 					<Filter
 						Name="default"
 						>
