--- a/dists/macosx/Info.plist.in
+++ b/dists/macosx/Info.plist.in
@@ -13,7 +13,7 @@
 	<key>CFBundleIconFile</key>
 	<string>residual.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.scummvm.residual</string>
+	<string>org.residual</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
