--- a/dists/msvc7/residual.vcproj
+++ b/dists/msvc7/residual.vcproj
@@ -313,7 +313,7 @@
 				RelativePath="..\..\engine\lab.h">
 			</File>
 			<File
-				RelativePath="..\..\engine\lipsynch.cpp">
+				RelativePath="..\..\engine\lipsync.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engine\lipsynch.h">
