Patch #2776913: Fix MSVC dists to include new necessary files
svn-id: r40047

--- a/dists/msvc9/scumm.vcproj
+++ b/dists/msvc9/scumm.vcproj
@@ -732,6 +732,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\scumm\script_v3.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\scumm\script_v4.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\scumm\script_v5.cpp"
 			>
 		</File>
