--- a/dists/msvc7/scumm.vcproj
+++ b/dists/msvc7/scumm.vcproj
@@ -527,6 +527,12 @@
 			RelativePath="..\..\engines\scumm\script_v2.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\scumm\script_v3.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\scumm\script_v4.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\scumm\script_v5.cpp">
 		</File>
 		<File
