--- a/dists/msvc8/scumm.vcproj
+++ b/dists/msvc8/scumm.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="scumm"
 	ProjectGUID="{B6AFD548-63D2-40CD-A652-E87095AFCBAF}"
 	RootNamespace="scumm"
@@ -728,6 +728,14 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\scumm\script_v2.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\scumm\script_v3.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\scumm\script_v4.cpp"
 			>
 		</File>
 		<File
