--- a/dists/msvc71/residual.vcproj
+++ b/dists/msvc71/residual.vcproj
@@ -330,7 +330,7 @@
 				RelativePath="..\..\engine\lipsync.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engine\lipsynch.h">
+				RelativePath="..\..\engine\lipsync.h">
 			</File>
 			<File
 				RelativePath="..\..\engine\localize.cpp">
