--- a/dists/msvc8/residual.vcproj
+++ b/dists/msvc8/residual.vcproj
@@ -456,7 +456,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engine\lipsynch.cpp"
+				RelativePath="..\..\engine\lipsync.cpp"
 				>
 			</File>
 			<File
