--- a/dists/msvc8/residual.vcproj
+++ b/dists/msvc8/residual.vcproj
@@ -460,7 +460,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engine\lipsynch.h"
+				RelativePath="..\..\engine\lipsync.h"
 				>
 			</File>
 			<File
