--- a/dists/msvc9/residual.vcproj
+++ b/dists/msvc9/residual.vcproj
@@ -461,11 +461,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engine\lipsynch.cpp"
+				RelativePath="..\..\engine\lipsync.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\engine\lipsynch.h"
+				RelativePath="..\..\engine\lipsync.h"
 				>
 			</File>
 			<File
