Updated the MSVC project files of the gob engine
svn-id: r40061

--- a/dists/msvc71/gob.vcproj
+++ b/dists/msvc71/gob.vcproj
@@ -205,6 +205,9 @@
 			RelativePath="..\..\engines\gob\draw_bargon.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\draw_fascin.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\draw_v1.cpp">
 		</File>
 		<File
@@ -293,6 +296,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\gob\inter_bargon.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\inter_fascin.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\gob\inter_v1.cpp">
