--- a/dists/msvc7/gob.vcproj
+++ b/dists/msvc7/gob.vcproj
@@ -191,6 +191,9 @@
 			RelativePath="..\..\engines\gob\draw_bargon.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\draw_fascin.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\draw_v1.cpp">
 		</File>
 		<File
@@ -279,6 +282,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\gob\inter_bargon.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\inter_fascin.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\gob\inter_v1.cpp">
