--- a/dists/msvc9/gob.vcproj
+++ b/dists/msvc9/gob.vcproj
@@ -284,6 +284,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\draw_fascin.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\draw_v1.cpp"
 			>
 		</File>
@@ -401,6 +405,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\gob\inter_bargon.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\inter_fascin.cpp"
 			>
 		</File>
 		<File
