Updated the MSVC project files of the gob engine for commit #40122
svn-id: r40125

--- a/dists/msvc7/gob.vcproj
+++ b/dists/msvc7/gob.vcproj
@@ -380,6 +380,12 @@
 			RelativePath="..\..\engines\gob\scenery_v2.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\scnplayer.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\scnplayer.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\util.cpp">
 		</File>
 		<File
