--- a/dists/msvc8/gob.vcproj
+++ b/dists/msvc8/gob.vcproj
@@ -535,6 +535,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\scnplayer.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\scnplayer.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\util.cpp"
 			>
 		</File>
