MSVC project files for Gob : Add demoplayer and batplayer needed to compile
svn-id: r40137

--- a/dists/msvc8/gob.vcproj
+++ b/dists/msvc8/gob.vcproj
@@ -6,6 +6,7 @@
 	ProjectGUID="{976D947A-A45F-4437-991E-412F695C64C7}"
 	RootNamespace="gob"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -579,11 +580,27 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\videoplayer.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\videoplayer.cpp"
 			>
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\videoplayer.h"
+			RelativePath="..\..\engines\gob\batplayer.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\batplayer.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\demoplayer.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\demoplayer.h"
 			>
 		</File>
 	</Files>
