--- a/dists/msvc9/gob.vcproj
+++ b/dists/msvc9/gob.vcproj
@@ -580,11 +580,27 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\videoplayer.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\videoplayer.cpp"
 			>
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\videoplayer.h"
+			RelativePath="..\..\engines\gob\batplayer.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\batplayer.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\demoplayer.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\gob\demoplayer.h"
 			>
 		</File>
 	</Files>
