--- a/dists/msvc7/residual.vcproj
+++ b/dists/msvc7/residual.vcproj
@@ -181,6 +181,12 @@
 				RelativePath="..\..\common\keyboard.h">
 			</File>
 			<File
+				RelativePath="..\..\common\libz.cpp">
+			</File>
+			<File
+				RelativePath="..\..\common\libz.h">
+			</File>
+			<File
 				RelativePath="..\..\common\list.h">
 			</File>
 			<File
@@ -239,12 +245,6 @@
 			</File>
 			<File
 				RelativePath="..\..\common\util.h">
-			</File>
-			<File
-				RelativePath="..\..\common\zlib.cpp">
-			</File>
-			<File
-				RelativePath="..\..\common\zlib.h">
 			</File>
 		</Filter>
 		<Filter
