--- a/dists/msvc71/residual.vcproj
+++ b/dists/msvc71/residual.vcproj
@@ -195,6 +195,12 @@
 				RelativePath="..\..\common\keyboard.h">
 			</File>
 			<File
+				RelativePath="..\..\common\libz.cpp">
+			</File>
+			<File
+				RelativePath="..\..\common\libz.h">
+			</File>
+			<File
 				RelativePath="..\..\common\list.h">
 			</File>
 			<File
@@ -253,12 +259,6 @@
 			</File>
 			<File
 				RelativePath="..\..\common\util.h">
-			</File>
-			<File
-				RelativePath="..\..\common\zlib.cpp">
-			</File>
-			<File
-				RelativePath="..\..\common\zlib.h">
 			</File>
 		</Filter>
 		<Filter
