--- a/dists/msvc8/residual.vcproj
+++ b/dists/msvc8/residual.vcproj
@@ -280,6 +280,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\libz.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\libz.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\list.h"
 				>
 			</File>
@@ -357,14 +365,6 @@
 			</File>
 			<File
 				RelativePath="..\..\common\util.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\common\zlib.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\common\zlib.h"
 				>
 			</File>
 		</Filter>
