--- a/dists/msvc9/residual.vcproj
+++ b/dists/msvc9/residual.vcproj
@@ -285,6 +285,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\libz.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\libz.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\list.h"
 				>
 			</File>
@@ -362,14 +370,6 @@
 			</File>
 			<File
 				RelativePath="..\..\common\util.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\common\zlib.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\common\zlib.h"
 				>
 			</File>
 		</Filter>
