Gob - Add game_fascin.cpp file
svn-id: r40208

--- a/dists/msvc71/gob.vcproj
+++ b/dists/msvc71/gob.vcproj
@@ -235,6 +235,9 @@
 			RelativePath="..\..\engines\gob\game_v6.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\game_fascin.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\global.cpp">
 		</File>
 		<File
