--- a/dists/msvc7/gob.vcproj
+++ b/dists/msvc7/gob.vcproj
@@ -221,6 +221,9 @@
 			RelativePath="..\..\engines\gob\game_v6.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\game_fascin.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\global.cpp">
 		</File>
 		<File
