--- a/dists/msvc9/gob.vcproj
+++ b/dists/msvc9/gob.vcproj
@@ -324,6 +324,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\game_fascin.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\global.cpp"
 			>
 		</File>
