Updated Gob project for files moved to the demos folder
svn-id: r40214

--- a/dists/msvc8/gob.vcproj
+++ b/dists/msvc8/gob.vcproj
@@ -250,6 +250,34 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="demos"
+			>
+			<File
+				RelativePath="..\..\engines\gob\demos\batplayer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\gob\demos\batplayer.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\gob\demos\demoplayer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\gob\demos\demoplayer.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\gob\demos\scnplayer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\gob\demos\scnplayer.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\engines\gob\coktelvideo.cpp"
 			>
@@ -539,10 +567,6 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\scnplayer.cpp"
-			>
-		</File>
-		<File
 			RelativePath="..\..\engines\gob\scnplayer.h"
 			>
 		</File>
@@ -588,22 +612,6 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\gob\videoplayer.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\engines\gob\batplayer.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\engines\gob\batplayer.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\engines\gob\demoplayer.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\engines\gob\demoplayer.h"
 			>
 		</File>
 	</Files>
