Gob - Fix MSVC7, 7.1 and 9 VCPROJ, as compilation failed (demos classes were teleported to a demos subdir by some evil entity) ;)
svn-id: r40235

--- a/dists/msvc71/gob.vcproj
+++ b/dists/msvc71/gob.vcproj
@@ -397,10 +397,10 @@
 			RelativePath="..\..\engines\gob\scenery_v2.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\scnplayer.cpp">
+			RelativePath="..\..\engines\gob\demos\scnplayer.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\scnplayer.h">
+			RelativePath="..\..\engines\gob\demos\scnplayer.h">
 		</File>
 		<File
 			RelativePath="..\..\engines\gob\util.cpp">
@@ -436,16 +436,16 @@
 			RelativePath="..\..\engines\gob\videoplayer.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\batplayer.cpp">
+			RelativePath="..\..\engines\gob\demos\batplayer.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\batplayer.h">
+			RelativePath="..\..\engines\gob\demos\batplayer.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\demoplayer.cpp">
+			RelativePath="..\..\engines\gob\demos\demoplayer.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\demoplayer.h">
+			RelativePath="..\..\engines\gob\demos\demoplayer.h">
 		</File>
 	</Files>
 	<Globals>
