--- a/dists/msvc7/gob.vcproj
+++ b/dists/msvc7/gob.vcproj
@@ -383,10 +383,10 @@
 			RelativePath="..\..\engines\gob\scenery_v2.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\scnplayer.cpp">
+			RelativePath="..\..\engines\gob\demos\scnplayer.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\scnplayer.h">
+			RelativePath="..\..\engines\gob\demos\scnplayer.h">
 		</File>
 		<File
 			RelativePath="..\..\engines\gob\util.cpp">
@@ -422,16 +422,16 @@
 			RelativePath="..\..\engines\gob\videoplayer.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\batplayer.cpp">
+			RelativePath="..\..\engines\gob\demos\batplayer.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\batplayer.h">
+			RelativePath="..\..\engines\gob\demos\batplayer.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\demoplayer.cpp">
+			RelativePath="..\..\engines\gob\demos\demoplayer.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\gob\demoplayer.h">
+			RelativePath="..\..\engines\gob\demos\demoplayer.h">
 		</File>
 	</Files>
 	<Globals>
